# pg-cerbos

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  CERBOS_QUICKSTART.md  DEVELOPER_SETUP.md  Justfile  README.md  compose.yml  env.example  pyproject.toml
cerbos/: cerbos-minimal.yaml  cerbos.yaml
cerbos-adapter/: Dockerfile  adapter.py  requirements.txt
cerbos-examples/: README.md  cerbos.yaml
docs/: # Cerbos Policy Reference Links.yaml  ADAPTER_ROUTE_FIX_PLAN.md  ADAPTER_TROUBLESHOOTING.md  AML_API_IMPLEMENTATION.md  AML_CYPHER_EXAMPLES.md  AML_POC_COMPLETE.md  AML_POC_PUPPYGRAPH_INTEGRATION.md  AML_POC_QUICKSTART.md  AML_POC_SPEC.md  AML_POC_SUMMARY.md  AML_UI_IMPLEMENTATION.md  AML_USER_CREDENTIALS.md  CERBOS_CONFIG_FIX.md  CERBOS_FINAL_SETUP.md  CERBOS_IMPLEMENTATION_STATUS.md  CERBOS_MIGRATION_INDEX.md  CERBOS_POLICY_FIX.md  CERBOS_POLICY_FIXES.md  CERBOS_RBAC_ABAC_ANALYSIS.md  CERBOS_RBAC_ABAC_SUMMARY.md  CERBOS_REFACTOR_PLAN.md  CERBOS_SUCCESS.md  CERBOS_TEMPORARY_DISABLE.md  CERBOS_TROUBLESHOOTING.md  CONTAINER_VERIFICATION.md  DOCUMENTATION_INDEX.md  DUPLICATE_ALIASES_FIX.md  ENVOY_STARTUP.md  ERROR_244_QUERY_EXECUTION_FIX.md  IMPLEMENTATION_SUMMARY.md  NATURAL_LANGUAGE_GRAPH_QUERY.md  NEXT_STEPS.md  PARSER_BRANCH_COMPARISON.md  PARSER_BRANCH_SOLUTION.md  PBAC_EXECUTIVE_OVERVIEW.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE2_IMPLEMENTATION_HISTORY.md  PHASE2_SCHEMA_VALIDATION_FIX.md  PHASE3_API_TESTING_RESULTS.md  (+52 more)
envoy/: envoy.yaml
opa/: authz-policy-fixed.rego  bootstrap.rego  field_security.rego  test_policies.rego
(+126 files in other folders)
